argocd/workloads/ollama/ollama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
spec:
  selector:
    matchLabels:
      name: ollama
  template:
    metadata:
      labels:
        name: ollama
    spec:
      tolerations:
        - key: node-role.kubernetes.io/gpu
          operator: Exists
      containers:
        - name: ollama
          image: ollama/ollama:0.6.5
          imagePullPolicy: Always
          resources: 
            limits:
              nvidia.com/gpu: '1'
          ports: 
            - containerPort: 11434
              protocol: TCP
          volumeMounts:
            - mountPath: /root/.ollama
              name: ollama-models
              readOnly: false
      restartPolicy: Always
      volumes:
        - name: ollama-models
          persistentVolumeClaim:
            claimName: ollama-models
