argocd/workloads/ollama/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  selector:
    name: ollama-rocm
  type: ClusterIP
  ports:
  - name: web
    port: 11434
    protocol: TCP
    targetPort: 11434
